--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,3 +5,110 @@
     verde: #49a09d
     lilás: #5f2c82
 */
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color: #5f2c82;
+
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1em;
+}
+
+main {
+    width: 100vw;
+    height: 100vh;
+
+    position: relative;
+}
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    width: 280px;
+     
+
+    background-color: white;
+
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.26);
+}
+
+div#img {
+    width: 100%;
+    height: 30vh;
+
+    background: blue url(../imagens/estrelas.jpg) no-repeat center top;
+    background-size: cover;
+
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+div#form > h1 {
+    margin: 10px 0;
+
+    text-align: center;
+}
+
+div#form > p {
+    margin: 10px;
+}
+
+div.campo {
+    background-color: #5f2c82;
+
+    margin: 10px;
+    padding: 5px;
+    
+    border-radius: 5px;
+}
+
+div.campo span {
+    color: white;
+}
+
+#iemail, #isenha {
+    padding: 10px;
+
+    background-color: #49a09d;
+    border-radius: 3px;
+    border: none;
+
+    font-size: 1em;
+
+    color: black;
+}
+
+input#bntEntrar, input#bntEsqSenha {
+    display: block;
+
+    width: 90%;
+
+    margin: 5px auto;
+    padding: 10px;
+
+    
+    border: none;
+    border-radius: 5px;
+}
+
+input#bntEntrar {
+    background-color: #49a09d;
+
+    color: white;
+}
+
+input#bntEsqSenha {
+    background-color: white;
+
+    border: #49a09d solid 1px;
+
+    color: #49a09d;
+}
