--- a/estilos/style.css
+++ b/estilos/style.css
@@ -94,6 +94,7 @@ input#bntEntrar, input#bntEsqSenha {
     margin: 5px auto;
     padding: 10px;
 
+    font-weight: bold;
     
     border: none;
     border-radius: 5px;
