--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -41,7 +41,7 @@
         padding: 8px 0;
     }
 
-    input#bntEntrar, input#bntEsqSenha {      
+    input#bntEntrar, #bntEsqSenha {      
         padding: 15px;
 
         margin-bottom: 20px;
@@ -84,6 +84,10 @@
         font-size: 2em;
     }
 
+    div#form > p {
+        font-size: 1.2em;
+    }
+
     div#form > form {
         margin-top: 30px;
     }
@@ -92,10 +96,11 @@
         padding: 8px 0;
     }
 
-    input#bntEntrar, input#bntEsqSenha {
+    input#bntEntrar, #bntEsqSenha {
         display: block;
     
         width: 40%;
+        height: 50px;
     
         margin: 10px 20px;
     }
@@ -104,7 +109,7 @@
         float: right;
     }
 
-    input#bntEsqSenha {
+    #bntEsqSenha {
         float: left;
     }
     
