--- a/estilos/style.css
+++ b/estilos/style.css
@@ -120,7 +120,7 @@ div.campo > input:focus-within {
     background-color: white;
 }
 
-input#bntEntrar, #bntEsqSenha {
+#bntPrinc, #bntEsqSenha {
     display: block;
 
     width: 90%;
@@ -135,7 +135,7 @@ input#bntEntrar, #bntEsqSenha {
     border-radius: 5px;
 }
 
-input#bntEntrar {
+#bntPrinc {
     background-color: #49a09d;
 
     color: white;
@@ -143,7 +143,7 @@ input#bntEntrar {
     margin-top: 20px;
 }
 
-input#bntEntrar:hover, #bntEsqSenha:hover  {
+#bntPrinc:hover, #bntEsqSenha:hover  {
     background-color: #316c6a;
     
     color: white;
@@ -161,8 +161,6 @@ input#bntEntrar:hover, #bntEsqSenha:hover  {
     color: #49a09d;
 
     text-align: center;
-
-    text-decoration: none;
 }
 
 #bntEsqSenha span {
